[gd_scene load_steps=11 format=3 uid="uid://bflfhgxnu8is6"]

[ext_resource type="Script" path="res://main.gd" id="1_nnnch"]
[ext_resource type="Texture2D" uid="uid://b3alq645pyp2u" path="res://BackgroundAssets/BackImage/neom-wTmGtmGQCjQ-unsplash.png" id="2_ydpal"]
[ext_resource type="AudioStream" uid="uid://c2vwx5ak11qwn" path="res://BackgroundAssets/Mozart - Eine Kleine Nachtmusik (320 kbps).mp3" id="3_mcpph"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mlls"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ka0bb"]
bg_color = Color(0.6, 1, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5soq5"]
bg_color = Color(0, 0.392157, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_haq8f"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyllt"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uw4jq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6vem"]
bg_color = Color(0, 1, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_nnnch")

[node name="Neom-wTmGtmGqCjQ-unsplash" type="Sprite2D" parent="."]
position = Vector2(560, 374)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_ydpal")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 59.0
offset_right = 302.0
offset_bottom = 648.0
theme_override_constants/separation = 10
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mcpph")
volume_db = -10.0
autoplay = true

[node name="Stages" type="Node2D" parent="."]

[node name="1" type="Button" parent="Stages"]
offset_left = 462.0
offset_top = 328.0
offset_right = 522.0
offset_bottom = 359.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_3mlls")
theme_override_styles/hover = SubResource("StyleBoxFlat_ka0bb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5soq5")
theme_override_styles/focus = SubResource("StyleBoxFlat_haq8f")
text = "Stage1"

[node name="2" type="Button" parent="Stages"]
offset_left = 599.0
offset_top = 283.0
offset_right = 659.0
offset_bottom = 314.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_xyllt")
theme_override_styles/hover = SubResource("StyleBoxFlat_ka0bb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5soq5")
theme_override_styles/focus = SubResource("StyleBoxFlat_uw4jq")
text = "Stage2"

[node name="3" type="Button" parent="Stages"]
offset_left = 747.0
offset_top = 208.0
offset_right = 807.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_b6vem")
theme_override_styles/hover = SubResource("StyleBoxFlat_ka0bb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5soq5")
theme_override_styles/focus = SubResource("StyleBoxFlat_uw4jq")
text = "Stage3"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
